--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "bignumber.js": "^9.0.0",
-    "na-gaussian-elimination": "^1.0.0"
+    "na-gaussian-elimination": "^1.0.0",
+    "rref": "0.0.1"
   },
   "devDependencies": {},
   "scripts": {
